exports[`test auto/detects-imports.js 1`] = `
"
import foo from \'foo\';

import bar from \'bar\';
bar();"
`;

exports[`test auto/detects-imports.js 2`] = `
"
import foo from \'foo\';

import bar from \'bar\';
bar();"
`;

exports[`test auto/detects-imports.js 3`] = `
"
import foo from \'foo\';

const bar = require(\'bar\');

bar();"
`;

exports[`test auto/detects-imports.js 4`] = `
"
import foo from \'foo\';

import bar from \'bar\';
bar();"
`;

exports[`test auto/detects-requires.js 1`] = `
"const require = require(\'require\');

const bar = require(\'bar\');

const foo = require(\'foo\');

bar();"
`;

exports[`test auto/detects-requires.js 2`] = `
"const require = require(\'require\');

const bar = require(\'bar\');

const foo = require(\'foo\');

bar();"
`;

exports[`test auto/detects-requires.js 3`] = `
"const require = require(\'require\');

const bar = require(\'bar\');

const foo = require(\'foo\');

bar();"
`;

exports[`test auto/detects-requires.js 4`] = `
"import require from \'require\';
import bar from \'bar\';

const foo = require(\'foo\');

bar();"
`;

exports[`test auto/ignores_type_imports.js 1`] = `
"
import type foo from \'foo\';

const bar = require(\'bar\');

bar();"
`;

exports[`test auto/ignores_type_imports.js 2`] = `
"
import type foo from \'foo\';

const bar = require(\'bar\');

bar();"
`;

exports[`test auto/ignores_type_imports.js 3`] = `
"
import type foo from \'foo\';

const bar = require(\'bar\');

bar();"
`;

exports[`test auto/ignores_type_imports.js 4`] = `
"
import type foo from \'foo\';

import bar from \'bar\';
bar();"
`;

exports[`test flow/both_type_and_value_position.js 1`] = `
"const Foo = require(\"Foo\");

const Bar = require(\"Bar\");

// Type position of Foo comes before value position.
function foo(): Foo {
  return new Foo();
}

// Value position of Bar comes before type position.
const theBar = new Bar();
function bar(): Bar {
  return theBar;
}"
`;

exports[`test flow/both_type_and_value_position.js 2`] = `
"const Foo = require(\"Foo\");

const Bar = require(\"Bar\");

// Type position of Foo comes before value position.
function foo(): Foo {
  return new Foo();
}

// Value position of Bar comes before type position.
const theBar = new Bar();
function bar(): Bar {
  return theBar;
}"
`;

exports[`test flow/both_type_and_value_position.js 3`] = `
"const Foo = require(\"Foo\");

const Bar = require(\"Bar\");

// Type position of Foo comes before value position.
function foo(): Foo {
  return new Foo();
}

// Value position of Bar comes before type position.
const theBar = new Bar();
function bar(): Bar {
  return theBar;
}"
`;

exports[`test flow/both_type_and_value_position.js 4`] = `
"import Foo from \"Foo\";
import Bar from \"Bar\";

// Type position of Foo comes before value position.
function foo(): Foo {
  return new Foo();
}

// Value position of Bar comes before type position.
const theBar = new Bar();
function bar(): Bar {
  return theBar;
}"
`;

exports[`test flow/missing_type.js 1`] = `
"import type Foo from \"Foo\";

function foo(x: Foo) {}"
`;

exports[`test flow/missing_type.js 2`] = `
"import type Foo from \"Foo\";

function foo(x: Foo) {}"
`;

exports[`test flow/missing_type.js 3`] = `
"import type Foo from \"Foo\";

function foo(x: Foo) {}"
`;

exports[`test flow/missing_type.js 4`] = `
"import type Foo from \"Foo\";

function foo(x: Foo) {}"
`;

exports[`test flow/nested_types.js 1`] = `
"import type Foo from \"Foo\";
import type Bar from \"Bar\";
import type Buz from \"Buz\";

type Baz = string;

function foo(): ?Foo<Bar<Baz, Buz>> {}"
`;

exports[`test flow/nested_types.js 2`] = `
"import type Foo from \"Foo\";
import type Bar from \"Bar\";
import type Buz from \"Buz\";

type Baz = string;

function foo(): ?Foo<Bar<Baz, Buz>> {}"
`;

exports[`test flow/nested_types.js 3`] = `
"import type Foo from \"Foo\";
import type Bar from \"Bar\";
import type Buz from \"Buz\";

type Baz = string;

function foo(): ?Foo<Bar<Baz, Buz>> {}"
`;

exports[`test flow/nested_types.js 4`] = `
"import type Foo from \"Foo\";
import type Bar from \"Bar\";
import type Buz from \"Buz\";

type Baz = string;

function foo(): ?Foo<Bar<Baz, Buz>> {}"
`;

exports[`test scope-trickery/test1.js 1`] = `
"const bar = require(\"bar\");

function foo() {
  var bar = () => {};
}
bar();

var buz = () => {};
function baz() {
  buz();
}"
`;

exports[`test scope-trickery/test1.js 2`] = `
"const bar = require(\"bar\");

function foo() {
  var bar = () => {};
}
bar();

var buz = () => {};
function baz() {
  buz();
}"
`;

exports[`test scope-trickery/test1.js 3`] = `
"const bar = require(\"bar\");

function foo() {
  var bar = () => {};
}
bar();

var buz = () => {};
function baz() {
  buz();
}"
`;

exports[`test scope-trickery/test1.js 4`] = `
"import bar from \"bar\";

function foo() {
  var bar = () => {};
}
bar();

var buz = () => {};
function baz() {
  buz();
}"
`;

exports[`test simple/empty.js 1`] = `""`;

exports[`test simple/empty.js 2`] = `""`;

exports[`test simple/empty.js 3`] = `""`;

exports[`test simple/empty.js 4`] = `""`;

exports[`test simple/multiple-statements.js 1`] = `
"const foo = require(\"foo\");

foo;
foo;
foo;"
`;

exports[`test simple/multiple-statements.js 2`] = `
"const foo = require(\"foo\");

foo;
foo;
foo;"
`;

exports[`test simple/multiple-statements.js 3`] = `
"const foo = require(\"foo\");

foo;
foo;
foo;"
`;

exports[`test simple/multiple-statements.js 4`] = `
"import foo from \"foo\";
foo;
foo;
foo;"
`;

exports[`test simple/one-statement.js 1`] = `
"const foo = require(\"foo\");

foo;"
`;

exports[`test simple/one-statement.js 2`] = `
"const foo = require(\"foo\");

foo;"
`;

exports[`test simple/one-statement.js 3`] = `
"const foo = require(\"foo\");

foo;"
`;

exports[`test simple/one-statement.js 4`] = `
"import foo from \"foo\";
foo;"
`;
